--- a/backend/frontendapp/templates/frontend/index.html
+++ b/backend/frontendapp/templates/frontend/index.html
@@ -5,6 +5,9 @@
         <title>django-rest-react-redux</title>
     </head>
     <body>
-    <div id="app"></div>
+    <div id="react-app"></div>
     </body>
+
+{% load static %}
+<script src="{% static "frontend/main.js" %}"></script>
 </html>
