--- a/backend/frontendapp/templates/frontend/index.html
+++ b/backend/frontendapp/templates/frontend/index.html
@@ -1,3 +1,4 @@
+{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,8 +7,6 @@
     </head>
     <body>
     <div id="react-app"></div>
+    {% render_bundle 'main' %}
     </body>
-
-{% load static %}
-<script src="{% static "frontend/main.js" %}"></script>
 </html>
